--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:url" content="https://web-present-for-ongonee-kvmh2mlk4a6kp6.sel4.cloudtype.app/" />
+    <meta property="og:title" content="옹공이의 글자수세기" />
+    <meta property="og:description" content="빨리 파블되서 여행 보내줘..." />
+    <meta property="og:image" content="https://i.namu.wiki/i/nJMH3fphgnBDLRhCkADeyIT8hrfsfT4yGMPi3FsJHOljDbI8Ni1oXhReLniD650u1K7FkKWH2iwmHFXjAE6QNQ.webp" />
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>옹공이의 글자수세기🙄</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
